sparkr backend env